syntax = "proto3";

package auction;

service GrpcAuction {
    rpc getAuction (GetAuctionRequest) returns (GrpcAuctionResponse);
}

message GetAuctionRequest {
    int32 id = 1;
}

message GrpcAuctionModel {
    int32 id = 1;
    string seller = 2;
    string auctionEnd = 3;
    int32 reservePrice = 4;
    string updatedAt = 5;
}

message GrpcAuctionResponse {
    GrpcAuctionModel auction = 1;
}
